--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -303,6 +303,24 @@
   number = {2}
 }
 
+@article{banerjeeExplainingConvectorEffect2017,
+  title = {Explaining the Convector Effect in Canopy Turbulence by Means of Large-Eddy Simulation},
+  author = {Banerjee, Tirtha and De Roo, Frederik and Mauder, Matthias},
+  date = {2017-06-20},
+  journaltitle = {Hydrology and Earth System Sciences},
+  volume = {21},
+  pages = {2987--3000},
+  publisher = {{Copernicus GmbH}},
+  issn = {1027-5606},
+  doi = {10.5194/hess-21-2987-2017},
+  url = {https://hess.copernicus.org/articles/21/2987/2017/},
+  urldate = {2021-05-30},
+  abstract = {{$<$}p{$><$}strong class="journal-contentHeaderColor"{$>$}Abstract.{$<$}/strong{$>$} Semi-arid forests are found to sustain a massive sensible heat flux in spite of having a low surface to air temperature difference by lowering the aerodynamic resistance to heat transfer (\emph{r}\textsubscript{H}) – a property called the {$<$}q{$>$}canopy convector effect{$<$}/q{$>$} (CCE). In this work large-eddy simulations are used to demonstrate that the CCE appears more generally in canopy turbulence. It is indeed a generic feature of canopy turbulence: \emph{r}\textsubscript{H} of a canopy is found to reduce with increasing unstable stratification, which effectively increases the aerodynamic roughness for the same physical roughness of the canopy. This relation offers a sufficient condition to construct a general description of the CCE. In addition, we review existing parameterizations for \emph{r}\textsubscript{H} from the evapotranspiration literature and test to what extent they are able to capture the CCE, thereby exploring the possibility of an improved parameterization.{$<$}/p{$>$}},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\JNLVWNU5\\Banerjee et al. - 2017 - Explaining the convector effect in canopy turbulen.pdf;C\:\\Users\\Me\\Zotero\\storage\\D6MC4HNB\\2017.html},
+  langid = {english},
+  number = {6}
+}
+
 @article{bartemucciOverstoryInfluencesLight2006,
   title = {Overstory Influences on Light Attenuation Patterns and Understory Plant Community Diversity and Composition in Southern Boreal Forests of {{Quebec}}},
   author = {Bartemucci, Paula and Messier, Christian and Canham, Charles D},
@@ -3417,6 +3435,25 @@
   number = {2}
 }
 
+@article{leighThickLeavesAvoid2012,
+  title = {Do Thick Leaves Avoid Thermal Damage in Critically Low Wind Speeds?},
+  author = {Leigh, A. and Sevanto, S. and Ball, M. C. and Close, J. D. and Ellsworth, D. S. and Knight, C. A. and Nicotra, A. B. and Vogel, S.},
+  date = {2012},
+  journaltitle = {New Phytologist},
+  volume = {194},
+  pages = {477--487},
+  issn = {1469-8137},
+  doi = {10.1111/j.1469-8137.2012.04058.x},
+  url = {https://nph.onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8137.2012.04058.x},
+  urldate = {2021-05-30},
+  abstract = {• Transient lulls in air movement are rarely measured, but can cause leaf temperature to rise rapidly to critical levels. The high heat capacity of thick leaves can damp this rapid change in temperature. However, little is known about the extent to which increased leaf thickness can reduce thermal damage, or how thick leaves would need to be to have biological significance. We evaluated quantitatively the contribution of small increases in leaf thickness to the reduction in thermal damage during critically low wind speeds under desert conditions. • We employed a numerical model to investigate the effect of thickness relative to transpiration, absorptance and leaf size on damage avoidance. We used measured traits and thermotolerance thresholds of real leaves to calculate the leaf temperature response to naturally occurring variable low wind speed. • Our results demonstrated that an increase in thickness of only fractions of a millimetre can prevent excursions to damaging high temperatures. This damping effect of increased thickness was greatest when other means of reducing leaf temperature (transpiration, reflectance or reduced size) were lacking. • For perennial desert flora, we propose that increased leaf thickness is important in decreasing the incidence of extreme heat stress and, in some species, in enhancing long-term survival.},
+  annotation = {\_eprint: https://nph.onlinelibrary.wiley.com/doi/pdf/10.1111/j.1469-8137.2012.04058.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\MQ3DXVVU\\Leigh et al. - 2012 - Do thick leaves avoid thermal damage in critically.pdf;C\:\\Users\\Me\\Zotero\\storage\\4CXN6Z58\\j.1469-8137.2012.04058.html},
+  keywords = {desert plants,heat stress,leaf temperature,leaf thickness,thermal damage,time constant,wind speed},
+  langid = {english},
+  number = {2}
+}
+
 @article{leon-garciaHeatTolerancePlant2019,
   title = {Heat Tolerance in Plant Leaves},
   author = {Leon-Garcia, Indira V.},
@@ -6145,6 +6182,25 @@
   keywords = {global warming,growth,photoreceptors,shade avoidance,temperature},
   langid = {english},
   number = {7}
+}
+
+@article{rotenbergDistinctPatternsChanges2011,
+  title = {Distinct Patterns of Changes in Surface Energy Budget Associated with Forestation in the Semiarid Region},
+  author = {Rotenberg, Eyal and Yakir, Dan},
+  date = {2011},
+  journaltitle = {Global Change Biology},
+  volume = {17},
+  pages = {1536--1548},
+  issn = {1365-2486},
+  doi = {10.1111/j.1365-2486.2010.02320.x},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2486.2010.02320.x},
+  urldate = {2021-05-30},
+  abstract = {Land use and land cover changes greatly influence surface energy balance and consequently climate, and are likely to be associated with the persistent predictions of warming and drying throughout the Mediterranean and other regions. We specifically address the question of how the high radiation load and suppressed latent heat flux, intrinsic to dry regions, interact with land use changes and climate in these environments. We use for this purpose a detailed 6-year (2003–2008) study of the redistribution of the radiation load in an open-canopy pine forest. The results show that compared with the background shrubland, there was a 23.8 W m−2 increase in shortwave radiation load on the forest (to a mean annual net solar radiation of 211 W m−2) associated with a decrease in albedo of 0.1. Surface (skin) temperature in the forest was lower than in the shrubland (by ∼5 °C on average) due to an efficient ‘convector effect’ and the production of a large sensible heat flux (up to 926 W m−2 in summer), which effectively shifted heat from the canopy to the overlying boundary layer. The cooler forest skin temperature resulted in suppression of upwelling longwave radiation (by 25 W m−2, annual average), further increasing the forest radiation load (mean annual net radiation of 116 and 67 W m−2 for forest and shrubland, respectively). This suppression also resulted in a local ‘canopy greenhouse effect’, where upwelling longwave radiation from the ground to the canopy was larger than from the canopy to the atmosphere (by up to 150 W m−2 in summer) and was associated with ∼3 °C warming below the canopy. The ability of the dry productive forest to deal with the high radiation load indicates the potential for afforestation in dry areas.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2486.2010.02320.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\UTAJSPBW\\Rotenberg and Yakir - 2011 - Distinct patterns of changes in surface energy bud.pdf;C\:\\Users\\Me\\Zotero\\storage\\F743AA5C\\j.1365-2486.2010.02320.html},
+  keywords = {afforestation,albedo,Aleppo pine,carbon sequestration,ecosystem energy budget,longwave radiation,semiarid environment},
+  langid = {english},
+  number = {4}
 }
 
 @article{roth-nebelsickComputerbasedAnalysisSteadystate2001,
